--- a/polybar/config-top.ini
+++ b/polybar/config-top.ini
@@ -161,7 +161,7 @@ font-2 = "Terminus:size=16;2"
 
 modules-left = menu title
 modules-center = i3
-modules-right = backlight alsa date time battery sysmenu
+modules-right = backlight pulseaudio date time battery sysmenu
 
 ; The separator will be inserted between the output of each module
 separator =
