--- a/polybar/config-bottom.ini
+++ b/polybar/config-bottom.ini
@@ -161,7 +161,7 @@ font-2 = "Terminus:size=16;1"
 
 modules-left = filesystem cpu memory temperature
 modules-center = mpd
-modules-right = updates network
+modules-right = updates adapter-network
 
 ; The separator will be inserted between the output of each module
 separator =
