--- a/polybar/config-top-timeless.ini
+++ b/polybar/config-top-timeless.ini
@@ -159,9 +159,9 @@ font-2 = "Terminus:size=16;2"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = menu title keyboard
+modules-left = menu title
 modules-center = i3
-modules-right = backlight pulseaudio date time battery sysmenu
+modules-right = backlight pulseaudio date battery sysmenu
 
 ; The separator will be inserted between the output of each module
 separator =
