--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -531,14 +531,14 @@ label-separator = |
 label-separator-padding = 2
 label-separator-foreground = #ffb52a
 
- _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/memory]
 type = internal/memory
 
 ; Seconds to sleep between updates
 ; Default: 1
-interval = 3
+interval = 1
 
 ; Available tags:
 ;   <label> (default)
@@ -688,15 +688,6 @@ icon-consume = ✀
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-; If you use both a wired and a wireless network, just add 2 module definitions. For example
-[module/wired-network]
-type = internal/network
-interface = eth0
-
-[module/wireless-network]
-type = internal/network
-interface = wlo1
-
 ; Normal Module
 [module/network]
 type = internal/network
@@ -780,6 +771,20 @@ ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
+[module/adapter-network]
+type = internal/network
+inherit = module/network
+interface = wlx4401bbad5bee
+
+; If you use both a wired and a wireless network, just add 2 module definitions. For example
+[module/wired-network]
+type = internal/network
+interface = eth0
+
+[module/wireless-network]
+type = internal/network
+interface = wlo1
+
 
 ; Only applies if <animation-packetloss> is used
 ;;animation-packetloss-0 = ⚠
