Use XDG config schema

--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -1,3 +1,5 @@
+;; We can run this using systemd by copying https://github.com/jonls/redshift/blob/master/data/systemd/redshift.service.in to ~/.config/systemd/user/redshift.service and then running 'systemctl start redshift.service --user'
+
 ; Global settings
 [redshift]
 temp-day=5700
