--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    name = lWarne
+    name = Laurence Warne
     email = laurencewarne@gmail.com
 
 [url "ssh://git@github.com/"]
@@ -36,3 +36,5 @@
 
     # Check committed files tracked by the repo
     ls = ls-tree --full-tree -r --name-only HEAD
+[github]
+	user = LaurenceWarne
