--- a/.config/polybar/config-top.ini
+++ b/.config/polybar/config-top.ini
@@ -31,6 +31,7 @@ include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
 include-file = ~/.config/polybar/bars.ini
+include-file = ~/.config/polybar/lw_modules.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
