--- a/.config/polybar/lw_modules.ini
+++ b/.config/polybar/lw_modules.ini
@@ -10,3 +10,15 @@ tail = true
 ; Seconds to sleep between updates
 ; Default: 2 (0 if `tail = true`)
 interval = 1
+
+[module/pavucontrol]
+type = custom/script
+
+click-left = xdotool key super+equal
+click-right = pactl list sinks | grep -q Mute:.no && pactl set-sink-mute 0 1 || pactl set-sink-mute 0 0
+
+exec = bash ~/.config/polybar/sound.sh
+;exec-if = pgrep pavu
+interval = 0.5
+;format-underline = #aa00aa
+format-suffix = "%"
