--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -839,6 +839,9 @@ ramp-volume-2 = 
 ramp-volume-3 = 
 ramp-volume-4 = 
 
+; Custom stuff
+click-right = xdotool key super+equal
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/temperature]
