Add notes on ssh-agent

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -186,7 +186,7 @@ mode "$game_launcher" {
     bindsym m exec minecraft
     bindsym d exec dwarf-fortress
     bindsym c exec cdda
-    bindsym s exec streamlink
+    bindsym s exec streamlink-gui
 
     bindsym Escape mode "default"
     bindsym Return mode "default"
