--- a/.config/redshift/redshift.conf
+++ b/.config/redshift/redshift.conf
@@ -1,4 +1,5 @@
-;; We can run this using systemd by copying https://github.com/jonls/redshift/blob/master/data/systemd/redshift.service.in to ~/.config/systemd/user/redshift.service and then running 'systemctl start redshift.service --user'
+;; If `redshift -c ~/.config/redshift/redshift.conf` throws a permissions error you may have
+;; to configure apparmor.  See https://github.com/jonls/redshift/issues/858#issuecomment-1125324576
 
 ; Global settings
 [redshift]
