--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -774,7 +774,7 @@ ramp-signal-4 = 
 [module/adapter-network]
 type = internal/network
 inherit = module/network
-interface = wlx4401bbad5bee
+interface = wlp4s0
 
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
