Add polybar hdd read/write module

--- a/.config/polybar/lw_modules.ini
+++ b/.config/polybar/lw_modules.ini
@@ -1,16 +1,3 @@
-[module/hard_disc]
-type = custom/script
-
-exec = ~/.config/polybar/scripts/hard_disc.sh
-
-; Will the script output continous content?
-; Default: false
-tail = true
-
-; Seconds to sleep between updates
-; Default: 2 (0 if `tail = true`)
-interval = 1
-
 [module/pavucontrol]
 type = custom/script
 
@@ -22,3 +9,51 @@ exec = bash ~/.config/polybar/sound.sh
 interval = 0.5
 ;format-underline = #aa00aa
 format-suffix = "%"
+
+[module/hdd-read]
+type = custom/script
+
+; Set this to true for scripts that continuously produce output
+; If set to 'true', everytime the script produces a new line of output, the module updates.
+; Otherwise, only the first line of output is considered and all later lines are discarded.
+; Default: false
+tail = false
+
+; Seconds to sleep between updates
+; Default: 5 (0 if `tail = true`)
+interval = 1
+
+;; Example output:
+; Linux 5.10.0-21-amd64 (Alderan) 	03/02/23 	_x86_64_	(16 CPU)
+
+;       tps    kB_read/s    kB_wrtn/s    kB_dscd/s    kB_read    kB_wrtn    kB_dscd Device
+;     55.87       731.0k       246.5k         0.0k       4.9G       1.6G       0.0k sda
+
+exec = "iostat -dh sda | head -4 | tail -1 | tr -s ' ' | cut -d ' ' -f 3"
+
+label = " %output%"
+format-background = ${env:ALT_BLUE}
+
+[module/hdd-write]
+type = custom/script
+
+; Set this to true for scripts that continuously produce output
+; If set to 'true', everytime the script produces a new line of output, the module updates.
+; Otherwise, only the first line of output is considered and all later lines are discarded.
+; Default: false
+tail = false
+
+; Seconds to sleep between updates
+; Default: 5 (0 if `tail = true`)
+interval = 1
+
+;; Example output:
+; Linux 5.10.0-21-amd64 (Alderan) 	03/02/23 	_x86_64_	(16 CPU)
+
+;       tps    kB_read/s    kB_wrtn/s    kB_dscd/s    kB_read    kB_wrtn    kB_dscd Device
+;     55.87       731.0k       246.5k         0.0k       4.9G       1.6G       0.0k sda
+
+exec = "iostat -dh sda | head -4 | tail -1 | tr -s ' ' | cut -d ' ' -f 4"
+
+label = " %output%"
+format-background = ${env:ALT_BLUE}
