--- a/.config/polybar/config-bottom.ini
+++ b/.config/polybar/config-bottom.ini
@@ -31,6 +31,7 @@ include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
 include-file = ~/.config/polybar/bars.ini
+include-file = ~/.config/polybar/lw_modules.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -161,7 +162,7 @@ font-2 = "Terminus:size=16;1"
 
 modules-left = filesystem cpu memory temperature
 modules-center = mpd
-modules-right = updates adapter-network
+modules-right = hdd-read hdd-write adapter-network
 
 ; The separator will be inserted between the output of each module
 separator =
