Auto detect disk for custom disk module

--- a/.config/polybar/lw_modules.ini
+++ b/.config/polybar/lw_modules.ini
@@ -29,7 +29,7 @@ interval = 1
 ;       tps    kB_read/s    kB_wrtn/s    kB_dscd/s    kB_read    kB_wrtn    kB_dscd Device
 ;     55.87       731.0k       246.5k         0.0k       4.9G       1.6G       0.0k sda
 
-exec = "iostat -dh sda | head -4 | tail -1 | tr -s ' ' | cut -d ' ' -f 3"
+exec = "iostat -dh $(findmnt -n -o SOURCE /) | head -4 | tail -1 | tr -s ' ' | cut -d ' ' -f 3"
 
 label = " %output%"
 format-background = ${env:ALT_BLUE}
@@ -52,8 +52,7 @@ interval = 1
 
 ;       tps    kB_read/s    kB_wrtn/s    kB_dscd/s    kB_read    kB_wrtn    kB_dscd Device
 ;     55.87       731.0k       246.5k         0.0k       4.9G       1.6G       0.0k sda
-
-exec = "iostat -dh sda | head -4 | tail -1 | tr -s ' ' | cut -d ' ' -f 4"
+exec = "iostat -dh $(findmnt -n -o SOURCE /) | head -4 | tail -1 | tr -s ' ' | cut -d ' ' -f 4"
 
 label = " %output%"
 format-background = ${env:ALT_BLUE}
