--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -774,7 +774,8 @@ ramp-signal-4 = 
 [module/adapter-network]
 type = internal/network
 inherit = module/network
-interface = wlp4s0
+;; $(nmcli --get-values GENERAL.DEVICE,GENERAL.TYPE device show | sed '/^wifi/!{h;d;};x' | head -n1)
+interface = wlp5s0
 
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
