--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,6 +9,8 @@
 # is used in the bar {} block below.
 font pango:monospace 8
 
+exec --no-startup-id sh -c 'xrandr --output VGA-0 --auto --right-of HDMI-0'
+
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -122,6 +124,10 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+workspace 0 output HDMI-0
+workspace 9 output HDMI-0
+workspace 8 output VGA-0
 
 # bind volume keys
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
