--- a/.config/polybar/config-bottom.ini
+++ b/.config/polybar/config-bottom.ini
@@ -38,6 +38,7 @@ include-file = ~/.config/polybar/lw_modules.ini
 ;; Bar Settings
 
 [bar/bottom]
+dpi = ${xrdb:Xft.dpi}
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
@@ -66,7 +67,7 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
-height = 20
+height = 50
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
@@ -133,9 +134,8 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Tamsyn:size=16;1"
-font-1 = "Siji:size=16;1"
-font-2 = "Terminus:size=16;1"
+font-0 = "Tamzen:size=12;1"
+font-1 = "Siji:size=12;1"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -200,7 +200,7 @@ tray-position = none
 tray-detached = false
 
 ; Tray icon max size
-tray-maxsize = 16
+tray-maxsize = 32
 
 ; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
 ; Enable pseudo transparency
