--- a/.config/i3/config
+++ b/.config/i3/config
@@ -209,7 +209,7 @@ for_window [class=".*"] border pixel 0
 # Generally easier to start these here than any kind of X/DM init script
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id feh --bg-scale ~/Pictures/background.jpg
-exec_always --no-startup-id redshift
+exec_always --no-startup-id bash -c '! pgrep -x "redshift" && redshift'
 
 exec --no-startup-id i3-msg 'workspace 9; layout tabbed; exec urxvt;'
 exec --no-startup-id i3-msg 'workspace 8; layout tabbed; exec firefox; exec urxvt; workspace 0'
