--- a/.config/i3/config
+++ b/.config/i3/config
@@ -210,6 +210,7 @@ for_window [class=".*"] border pixel 0
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id feh --bg-scale ~/Pictures/background.jpg
 exec_always --no-startup-id bash -c '! pgrep -x "redshift" && redshift'
+exec_always --no-startup-id xset b off
 
 exec --no-startup-id i3-msg 'workspace 9; layout tabbed; exec urxvt;'
 exec --no-startup-id i3-msg 'workspace 8; layout tabbed; exec firefox; exec urxvt; workspace 0'
