Add module for monitoring gpu temp

--- a/.config/polybar/lw_modules.ini
+++ b/.config/polybar/lw_modules.ini
@@ -56,3 +56,15 @@ exec = "iostat -dh $(findmnt -n -o SOURCE /) | head -4 | tail -1 | tr -s ' ' | c
 
 label = " %output%"
 format-background = ${env:ALT_BLUE}
+
+[module/amdgpu-temperature]
+type = custom/script
+
+click-left = amdgpu_top --gui
+click-right = amdgpu_top --gui
+
+exec = sensors -j | jq 'to_entries[] | select(.key | startswith("amd")).value.edge.temp1_input'
+
+interval = 1
+
+format = " <label>°C"
