Use existing module for temperature

--- a/.config/polybar/lw_modules.ini
+++ b/.config/polybar/lw_modules.ini
@@ -58,13 +58,24 @@ label = " %output%"
 format-background = ${env:ALT_BLUE}
 
 [module/amdgpu-temperature]
-type = custom/script
+type = internal/temperature
 
 click-left = amdgpu_top --gui
 click-right = amdgpu_top --gui
 
-exec = sensors -j | jq 'to_entries[] | select(.key | startswith("amd")).value.edge.temp1_input'
+; Full path of temperature sysfs path
+; Use `sensors` to find preferred temperature source, then run
+; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
+; to find path to desired file
+; Default reverts to thermal zone setting
+hwmon-path = /sys/devices/pci0000:00/0000:00:03.1/0000:07:00.0/0000:08:00.0/0000:09:00.0/hwmon/hwmon1/temp1_input
 
 interval = 1
 
-format = " <label>°C"
+base-temperature = 60
+
+; Threshold temperature to display warning label (in degrees celsius)
+; Default: 80
+warn-temperature = 90
+
+format = " <label>"
