Add gpu total and vram usage

--- a/.config/polybar/config-top.ini
+++ b/.config/polybar/config-top.ini
@@ -160,7 +160,7 @@ font-1 = "Siji:size=12;1"
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = menu title keyboard amdgpu-temperature
+modules-left = menu title keyboard amdgpu-usage amdgpu-vram-usage amdgpu-temperature
 modules-center = i3
 modules-right = backlight pulseaudio date time battery sysmenu
 
