--- a/.config/polybar/lw_modules.ini
+++ b/.config/polybar/lw_modules.ini
@@ -57,6 +57,24 @@ exec = "iostat -dh $(findmnt -n -o SOURCE /) | head -4 | tail -1 | tr -s ' ' | c
 label = " %output%"
 format-background = ${env:ALT_BLUE}
 
+[module/amdgpu-usage]
+type = custom/script
+exec = radeontop -d - -i 1 | grep --line-buffered -oP "gpu \K\d{1,3}"
+tail = true
+format=" <label>%"
+
+click-left = amdgpu_top --gui
+click-right = amdgpu_top --gui
+
+[module/amdgpu-vram-usage]
+type = custom/script
+exec = radeontop -d - -i 1 | grep --line-buffered -oP "\d(?=mb, gtt)"
+tail = true
+format=" <label> Mib"
+
+click-left = amdgpu_top --gui
+click-right = amdgpu_top --gui
+
 [module/amdgpu-temperature]
 type = internal/temperature
 
