--- a/.config/i3/config
+++ b/.config/i3/config
@@ -173,12 +173,13 @@ bindsym $mod+r mode "resize"
 
 # Press $mod+o followed by either f, s, Escape or Return to launch firefox,
 # steam or return to the default mode, respectively.
-set $mode_launcher Launch: [e]macs [f]irefox [m]usic=vlc [s]team [z]oom
+set $mode_launcher Launch: [e]macs [f]irefox [h]eroic [m]usic=vlc [s]team [z]oom
 bindsym $mod+o mode "$mode_launcher"
 
 mode "$mode_launcher" {
     bindsym e exec emacs
     bindsym f exec firefox
+    bindsym h exec heroic
     bindsym m exec "vlc --no-playlist-autostart ~/Music/*"
     bindsym s exec steam
     bindsym z exec zoom
