--- a/.config/polybar/lw_modules.ini
+++ b/.config/polybar/lw_modules.ini
@@ -61,6 +61,8 @@ format-background = ${env:ALT_BLUE}
 type = custom/script
 exec = radeontop -d - -i 1 | grep --line-buffered -oP "gpu \K\d{1,3}"
 tail = true
+; Set value min width
+; If the min-width begins with a `0`, the string will be zero-padded
 format=" <label>%"
 
 click-left = amdgpu_top --gui
@@ -86,7 +88,7 @@ click-right = amdgpu_top --gui
 ; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
 ; to find path to desired file
 ; Default reverts to thermal zone setting
-hwmon-path = /sys/devices/pci0000:00/0000:00:03.1/0000:07:00.0/0000:08:00.0/0000:09:00.0/hwmon/hwmon1/temp1_input
+hwmon-path = /sys/devices/pci0000:00/0000:00:01.2/0000:02:00.2/0000:03:00.0/0000:04:00.0/0000:05:00.0/0000:06:00.0/hwmon/hwmon1/temp1_input
 
 interval = 1
 
