Add sway config

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -691,7 +691,7 @@ icon-consume = ✀
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlo1
+interface = enp8s0
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -743,7 +743,7 @@ format-disconnected = <label-disconnected>
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%essid% %downspeed:8% %upspeed:8%"
+label-connected = "%downspeed:8% %upspeed:8%"
 ;;label-connected-foreground = #eefafafa
 
 ; Available tokens:
