--- a/.config/polybar/config-bottom.ini
+++ b/.config/polybar/config-bottom.ini
@@ -162,7 +162,7 @@ font-1 = "Siji:size=12;1"
 
 modules-left = filesystem cpu memory temperature
 modules-center = mpd
-modules-right = hdd-read hdd-write adapter-network
+modules-right = hdd-read hdd-write network
 
 ; The separator will be inserted between the output of each module
 separator =
