--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,4 +1,4 @@
-# Custom i3 config, it's an edited version of the standard config in /etc/i3/config
+# Custom i3/sway config, it's an edited version of the standard config in /etc/i3/config
 #
 # Current keyboard has no right hand win key so all the keybindings will use keys
 # pressed by the right hand (touch typing).
@@ -8,6 +8,10 @@
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
+
+input * {
+    xkb_layout "lw_custom"
+}
 
 exec --no-startup-id sh -c 'xrandr --output VGA-0 --auto --right-of HDMI-0'
 
@@ -123,7 +127,7 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+0 move container to workspace 0
 
 workspace 0 output HDMI-0
 workspace 9 output HDMI-0
@@ -135,15 +139,12 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 
 # bind print screen key
-bindsym Print exec gnome-screenshot -i 
-#bindsym Print exec --no-startup-id scrot -s# ~/Pictures/screenshots/%d-%m-%Y-%T-screenshot.png
+bindsym Print exec GRIM_DEFAULT_DIR=~/Pictures grim -g "$(slurp)"
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+r reload
+
+bindsym $mod+Shift+e exit
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -208,9 +209,9 @@ bindsym $mod+equal exec pavucontrol  # Also see https://github.com/GeorgeFilipki
 for_window [class=".*"] border pixel 0
 
 # Generally easier to start these here than any kind of X/DM init script
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id feh --bg-scale ~/Pictures/background.jpg
-exec_always --no-startup-id bash -c '! pgrep -x "redshift" && redshift'
+exec_always --no-startup-id bash -c '! pgrep -x "waybar" && waybar'
+exec_always --no-startup-id swaybg ~/Pictures/background.jpg
+exec_always --no-startup-id bash -c '! pgrep -x "wlsunset" && wlsunset -l 53.483959 -L -2.244644 -t 3000 -T 5500'
 exec_always --no-startup-id xset b off
 
 exec --no-startup-id i3-msg 'workspace 9; layout tabbed; exec urxvt;'
