--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,4 +1,4 @@
-# Custom i3/sway config, it's an edited version of the standard config in /etc/i3/config
+# Custom sway  it's an edited version of the standard config in /etc/i3/config
 #
 # Current keyboard has no right hand win key so all the keybindings will use keys
 # pressed by the right hand (touch typing).
@@ -7,7 +7,7 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font Iosevka 16
 
 input * {
     xkb_layout "lw_custom"
@@ -47,10 +47,6 @@ bindsym $mod+u kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+$left focus left
@@ -82,7 +78,6 @@ bindsym $mod+i fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+n layout stacking
 bindsym $mod+m layout tabbed
-#bindsym $mod+0xff0d layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -208,15 +203,22 @@ bindsym $mod+equal exec pavucontrol  # Also see https://github.com/GeorgeFilipki
 # Disable window title bars
 for_window [class=".*"] border pixel 0
 
+# https://github.com/swaywm/sway/wiki#gtk-applications-take-20-seconds-to-start
+exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
+# https://github.com/swaywm/sway/issues/5732
+exec systemctl --user import-environment
 # Generally easier to start these here than any kind of X/DM init script
 exec_always --no-startup-id bash -c '! pgrep -x "waybar" && waybar'
-exec_always --no-startup-id swaybg ~/Pictures/background.jpg
+exec_always --no-startup-id swaybg -i ~/Pictures/background.jpg
 exec_always --no-startup-id bash -c '! pgrep -x "wlsunset" && wlsunset -l 53.483959 -L -2.244644 -t 3000 -T 5500'
 exec_always --no-startup-id xset b off
+exec_always --no-startup-id xrdb ~/.Xdefaults
+exec_always --no-startup-id xset +fp ~/.local/share/fonts
+exec_always --no-startup-id xset fp rehash
 
-exec --no-startup-id i3-msg 'workspace 9; layout tabbed; exec urxvt;'
-exec --no-startup-id i3-msg 'workspace 8; layout tabbed; exec firefox; exec urxvt; workspace 0'
-exec --no-startup-id i3-msg 'workspace 0; layout tabbed; exec emacs'
+exec --no-startup-id swagmsg 'workspace 9; exec urxvt; layout tabbed'
+exec --no-startup-id swagmsg 'workspace 8; exec firefox; urxvt; layout tabbed; workspace 0'
+exec --no-startup-id swagmsg 'workspace 0; exec emacs; layout tabbed'
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
