--- a/.config/sway/config
+++ b/.config/sway/config
@@ -134,7 +134,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 
 # bind print screen key
-bindsym Print exec GRIM_DEFAULT_DIR=~/Pictures grim -g "$(slurp)"
+# TODO switch to https://github.com/jtheoof/swappy when its on Debian stable (13?)
+bindsym Print exec (export PNG_NAME=/tmp/$(uuidgen).png && grim -g "$(slurp)" $PNG_NAME && mv $PNG_NAME $(zenity --file-selection --save))
 
 # reload the configuration file
 bindsym $mod+Shift+r reload
