--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -13,7 +13,7 @@
 	"name": "topbar",
         "layer": "top",
         "position": "top", 
-	"modules-left": ["sway/language", "custom/gpu-icon", "custom/amdgpu-usage", "custom/amdgpu-vram", "custom/amdgpu-temperature", "sway/window", "keyboard-state", "sway/mode"],
+	"modules-left": ["sway/language", "custom/gpu-icon", "custom/amdgputop-amdgpu-usage", "custom/amdgputop-amdgpu-vram", "custom/amdgputop-amdgpu-temperature", "sway/window", "keyboard-state", "sway/mode"],
 	"modules-center": ["sway/workspaces"],
 	"modules-right": ["pulseaudio", "clock"],
 	"tray": {
@@ -102,27 +102,51 @@
             "tooltip": true,
         },
 
-	"custom/amdgpu-usage": {
+	"custom/radeontop-amdgpu-usage": {
             "format": "{}%",
             "exec-if": "which radeontop",
-            "exec": "radeontop -d - -i 1 | python3 $HOME/.config/waybar/amdgpu.py gpu",
+            "exec": "radeontop -d - -i 1 | python3 $HOME/.config/waybar/radeontop_amdgpu.py gpu",
             "tooltip": true,
 	    "restart-interval": 100,
         },
 
-	"custom/amdgpu-vram": {
+	"custom/radeontop-amdgpu-vram": {
             "format": "{}",
             "exec-if": "which radeontop",
-            "exec": "radeontop -d - -i 1 | python3 $HOME/.config/waybar/amdgpu.py vram",
+            "exec": "radeontop -d - -i 1 | python3 $HOME/.config/waybar/radeontop_amdgpu.py vram",
             "tooltip": true,
 	    "restart-interval": 100,
         },
 
-	"custom/amdgpu-temperature": {
+	"custom/radeontop-amdgpu-temperature": {
             "format": "{}°C",
-            "exec": "python3 $HOME/.config/waybar/amdgpu_temperature.py",
+            "exec": "python3 $HOME/.config/waybar/radeontop_amdgpu_temperature.py",
             "tooltip": true,
 	    "interval": 2,
+        },
+
+	"custom/amdgputop-amdgpu-usage": {
+            "format": "{}%",
+            "exec": "amdgpu_top -J -n 1 | python3 $HOME/.config/waybar/amdgpu_top_amdgpu.py gpu_activity.GFX.value",
+	    "interval": 2
+        },
+
+	"custom/amdgputop-amdgpu-vram": {
+            "format": "{}M",
+            "exec": "amdgpu_top -J -n 1 | python3 $HOME/.config/waybar/amdgpu_top_amdgpu.py 'VRAM.Total VRAM Usage.value'",
+	    "interval": 2
+        },
+
+	"custom/amdgputop-amdgpu-total-vram": {
+            "format": "{}M",
+            "exec": "amdgpu_top -J -n 1 | python3 $HOME/.config/waybar/amdgpu_top_amdgpu.py 'VRAM.Total VRAM.value'",
+	    "interval": 2
+        },
+
+	"custom/amdgputop-amdgpu-temperature": {
+            "format": "{}°C",
+            "exec": "amdgpu_top -J -n 1 | python3 $HOME/.config/waybar/amdgpu_top_amdgpu.py gpu_metrics.temperature_hotspot",
+	    "interval": 2
         },
     },
 
