--- a/.config/sway/config
+++ b/.config/sway/config
@@ -5,6 +5,8 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY DISPLAY SWAYSOCK XDG_CURRENT_DESKTOP=sway XDG_SESSION_DESKTOP=sway
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font Iosevka 16
@@ -186,14 +188,16 @@ mode "$mode_launcher" {
     bindsym Return mode "default"
 }
 
-set $game_launcher Launch: [m]inecraft [d]warf-fortress [c]ataclysm-dda [s]treamlink
+set $game_launcher Launch: [m]inecraft [d]warf-fortress [c]ataclysm-dda [s]treamlink [D]olphin-emu d[E]smume
 bindsym $mod+p mode "$game_launcher"
 
 mode "$game_launcher" {
-    bindsym m exec minecraft-launcher
+    bindsym m exec minecraft
     bindsym d exec dwarf-fortress
     bindsym c exec cdda
     bindsym s exec streamlink-gui
+    bindsym D exec dolphin-emu
+    bindsym E exec desmume
 
     bindsym Escape mode "default"
     bindsym Return mode "default"
