--- a/.config/sway/config
+++ b/.config/sway/config
@@ -230,7 +230,7 @@ exec_always xset +fp ~/.local/share/fonts
 exec_always xset fp rehash
 
 # TODO: How TF do I make each workspace tabbed?
-exec swaymsg 'workspace 9; exec urxvt; exec slack; layout tabbed'
+exec swaymsg 'workspace 9; exec urxvt; layout tabbed'
 exec swaymsg 'workspace 8; exec firefox; exec urxvt; layout tabbed; workspace 0'
 exec swaymsg 'workspace 0; exec emacs; layout tabbed'
 
