--- a/.config/sway/config
+++ b/.config/sway/config
@@ -140,6 +140,8 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
 # TODO switch to https://github.com/jtheoof/swappy when its on Debian stable (13?)
 bindsym Print exec (export PNG_NAME=/tmp/$(uuidgen).png && grim -g "$(slurp)" $PNG_NAME && mv $PNG_NAME $(zenity --file-selection --save))
 
+bindsym $mod+period exec makoctl dismiss -a
+
 # reload the configuration file
 bindsym $mod+Shift+r reload
 
